
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2016-07-19 niel
	Fix: Add lithium libraries bootstrap for Admin pages (Fixes issue 2215).
2016-07-19 DariusIII
	Fix: Display of browsing categories on browse pages of every theme.
2016-07-18 DariusIII
	Fix: RSS/API usenetdate format to conform with newznab api specification
	Chg: Set default value for groupName to -1 in getBrowseRange function
	Fix: Blank browse pages when browsing per category
	Chg: Add group parameter support to api search function (fixes issue #2195)
2016-07-18 niel
	Fix: Two leftover references to constants.php
2016-07-17 niel
	Chg: Tidy up the bootstrapping process.
	Fix: Blank screen on fresh deployment (Issue 2214)
2016-07-15 DariusIII
	Chg: Split season and season and episode queries to prevent undefined index notices in api.php
	Mrg: PR #2193 @DariusIII
	Fix: Leftover r.group_id in requestid_threaded.py(Fixes issue #2213)
2016-07-14 DariusIII
	Chg: Add empty data check for season and episode queries in api
	Fix: Add back missing nzb download to api.php(fixes issue #2212)
	Fix: Typo in api.php
2016-07-13 niel
	Fix: Add work around for duplicate constants warning.
2016-07-13 DariusIII
	Fix: Remove searchname after the guid when calling release details page in Charisma/Gamma/Gentele/Omicron themes
	Fix: Adding movies to my movies list from in theatre page in Charisma/Gentele/Omicron
	Fix: Marking of new releases in Gamma theme browse page
	Chg: Add check if isadmin is set in themes
2016-07-12 DariusIII
	Chg: Update profile edit pages in Charisma/Gentele/Omicron themes
	Fix: Reset user grabs and api requests in Charisma/Gamma/Gentele/Omicron themes (fix issue #2206)
2016-07-11 DariusIII
	Chg: Update Omicron css/js to AdminLTE 2.3.5
2016-07-08 niel