@@ -1,0 +1,5 @@
+# Add new UHD categories to Movies, TV and XXX
+
+INSERT IGNORE INTO categories (id, title, parentid) VALUES (2045, 'UHD', 2000);
+INSERT IGNORE INTO categories (id, title, parentid) VALUES (5045, 'UHD', 5000);
+INSERT IGNORE INTO categories (id, title, parentid) VALUES (6045, 'UHD', 6000);
