@@ -9,6 +9,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2016-07-20 DariusIII
+	Chg: Add UHD subcats to Movies, TV and XXX categories. Note: run recategorize script to populate the new cats
 2016-07-19 niel
 	Fix: Add lithium libraries bootstrap for Admin pages (Fixes issue 2215).
 2016-07-19 DariusIII
